vcl/inc/impgraph.hxx
@@ -56,6 +56,8 @@ private:
 
     GDIMetaFile                  maMetaFile;
     BitmapEx                     maEx;
+    /// If maEx is empty, this preferred size will be set on it when it gets initialized.
+    Size                         maExPrefSize;
     ImpSwapInfo                  maSwapInfo;
     std::unique_ptr<Animation>   mpAnimation;
     std::shared_ptr<GraphicReader> mpContext;
@@ -194,6 +196,9 @@ private:
     friend void         ReadImpGraphic(SvStream& rIStm, ImpGraphic& rImpGraphic);
 
     const std::shared_ptr<VectorGraphicData>& getVectorGraphicData() const;
+
+    /// Gets the bitmap replacement for a vector graphic.
+    BitmapEx getVectorGraphicReplacement() const;
 
     bool ensureAvailable () const;
 
